fixed text shadow, fixed menu purple, added link to page doll, made page doll disappear on small screens

--- a/public/css/lorekeeper.css
+++ b/public/css/lorekeeper.css
@@ -112,6 +112,7 @@ main > .row {
 .navbar .navbar-brand, .navbar .nav-item {
     text-transform: uppercase;
     font-family: Roboto Condensed, serif;
+    text-shadow:1px 1px 10px #ffffff;
 }
 
 .navbar .row { width: 100%; }
